--- a/CMSv4/CMSv4.csproj
+++ b/CMSv4/CMSv4.csproj
@@ -1964,6 +1964,7 @@
     <Content Include="Areas\ModuloAdmin\Views\TakeOrPayAdmin\Script.cshtml" />
     <Content Include="Areas\ModuloAdmin\Views\ScheduleAdmin\Index.cshtml" />
     <Content Include="Areas\Modulo\Views\Lista\Taxas.cshtml" />
+    <Content Include="Areas\Modulo\Views\Lista\Comunicados.cshtml" />
     <None Include="bundleconfig.json" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\asp_net\main.ashx" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\conf.json" />
