Alterações/remoções e renomeações de arquivos para limpeza do código Pt.1

--- a/CMSv4/Web.config
+++ b/CMSv4/Web.config
@@ -91,7 +91,7 @@
             http://wwww.servidor.com.br/Replicacao.asmx;C:\CMS\Arquivos;
       -->
     <add key="VM2.CMS.Replicacao.Locais" value="" />
-    <add key="VM2.CMS.Replicacao.EmailErro" value="rafael.vissontai@vm2.com.br" />
+    <add key="VM2.CMS.Replicacao.EmailErro" value="homologacao@vm2.com.br" />
 
     <!--YANDEX-->
     <add key="Framework.Yandex.Key" value="trnsl.1.1.20170707T165618Z.7eb0af5c6bd73ab9.a68cbda456e8611170fa931039dec138c93fb9ec" />
