--- a/FrameworkApplication/packages.config
+++ b/FrameworkApplication/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="4.0.5" targetFramework="net461" />
   <package id="Humanizer.Core" version="2.7.2" targetFramework="net461" />
   <package id="MasDev.Common.Push.Core" version="1.0.1" targetFramework="net45" />
   <package id="MasDev.Common.Push.PushSharp" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="PushSharp" version="2.2.1.0" targetFramework="net45" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net461" />
 </packages>
