APTOP_FASE2_004_Ajuste a tela administrativa de programação de proposta

--- a/CMSv4/CMSv4.csproj
+++ b/CMSv4/CMSv4.csproj
@@ -1965,6 +1965,8 @@
     <Content Include="Areas\ModuloAdmin\Views\ProgramacaoNavioAdmin\Item.cshtml" />
     <Content Include="Areas\ModuloAdmin\Views\GestaoDeCustosPenalidades\Importar.cshtml" />
     <Content Include="Areas\ModuloAdmin\Views\GestaoDeCustosPenalidades\Historico.cshtml" />
+    <Content Include="Areas\ModuloAdmin\Views\ProgramacaoProposta\Item1.cshtml" />
+    <Content Include="Areas\ModuloAdmin\Views\ProgramacaoProposta\Item.cshtml" />
     <None Include="bundleconfig.json" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\asp_net\main.ashx" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\conf.json" />
