--- a/CMSv4/packages.config
+++ b/CMSv4/packages.config
@@ -10,7 +10,8 @@
   <package id="jQuery" version="1.6.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
