--- a/FrameworkApplication/packages.config
+++ b/FrameworkApplication/packages.config
@@ -4,10 +4,14 @@
   <package id="Humanizer.Core" version="2.7.2" targetFramework="net461" />
   <package id="MasDev.Common.Push.Core" version="1.0.1" targetFramework="net45" />
   <package id="MasDev.Common.Push.PushSharp" version="1.0.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="PushSharp" version="2.2.1.0" targetFramework="net45" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net461" />
