Tela de Gestão de Informações de Exportação

--- a/CMSv4.Model/CMSv4.Model.csproj
+++ b/CMSv4.Model/CMSv4.Model.csproj
@@ -146,6 +146,8 @@
     <Compile Include="Base\Galeria\MLGaleriaArquivo.cs" />
     <Compile Include="Base\GestaoDeCustosPenalidades\MLGestaoDeCustosPealidadesHistorico.cs" />
     <Compile Include="Base\GestaoDeCustosPenalidades\MLGestaoDeCustosPenalidades.cs" />
+    <Compile Include="Base\GestaoInformacoesExportacao\MLGestaoInformacoesExportacao.cs" />
+    <Compile Include="Base\GestaoInformacoesExportacao\MLGestaoInformacoesExportacaoHistorico.cs" />
     <Compile Include="Base\Grupo\MLGrupo.cs" />
     <Compile Include="Base\Grupo\MLGrupoPermissao.cs" />
     <Compile Include="Base\Grupo\MLGrupoViewModel.cs" />
