--- a/CMSv4/CMSv4.csproj
+++ b/CMSv4/CMSv4.csproj
@@ -198,6 +198,7 @@
     </Compile>
     <Compile Include="Areas\CMS\Controllers\PageSpeedController.cs" />
     <Compile Include="Areas\ModuloAdmin\Controllers\GestaoDeCustosPenalidadesController.cs" />
+    <Compile Include="Areas\ModuloAdmin\Controllers\GestaoInformacoesExportacaoController.cs" />
     <Compile Include="Areas\ModuloAdmin\Controllers\ProgramacaoNavioAdminController.cs" />
     <Compile Include="Areas\ModuloAdmin\Controllers\ProgramacaoPropostaController.cs" />
     <Compile Include="Areas\CMS\Controllers\RoxyFilemanController.cs" />
@@ -1973,6 +1974,10 @@
     <Content Include="Areas\Modulo\Views\TakeOrPayTermos\TermoRegularHistorico.cshtml" />
     <Content Include="Areas\Modulo\Views\TakeOrPayTermos\TermoSpot.cshtml" />
     <Content Include="Areas\Modulo\Views\TakeOrPayTermos\TermoSpotHistorico.cshtml" />
+    <Content Include="Areas\ModuloAdmin\Views\GestaoInformacoesExportacao\Item.cshtml" />
+    <Content Include="Areas\ModuloAdmin\Views\GestaoInformacoesExportacao\Index.cshtml" />
+    <Content Include="Areas\ModuloAdmin\Views\GestaoInformacoesExportacao\_Importar.cshtml" />
+    <Content Include="Areas\ModuloAdmin\Views\GestaoInformacoesExportacao\_Historico.cshtml" />
     <None Include="bundleconfig.json" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\asp_net\main.ashx" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\conf.json" />
