Tela de Gestão de Informações de Importação

--- a/CMSv4.BusinessLayer/CMSv4.BusinessLayer.csproj
+++ b/CMSv4.BusinessLayer/CMSv4.BusinessLayer.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Base\Funcionalidade\BLFuncionalidade.cs" />
     <Compile Include="Base\GaleriaMultimidia\BLGaleriaMultimidia.cs" />
     <Compile Include="Base\Galeria\BLGaleria.cs" />
+    <Compile Include="Base\GestaoInformacoesImportacao\BLGestaoInformacoesImportacao.cs" />
     <Compile Include="Base\Grupo\BLGrupo.cs" />
     <Compile Include="Base\HttpContextFactory.cs" />
     <Compile Include="Base\Layout\BLLayout.cs" />
