--- a/CMSv4/Web.config
+++ b/CMSv4/Web.config
@@ -43,6 +43,10 @@
     <add key="SMTP.PRODUCAO.DEFAULTCREDENTIALS" value="False" />
     <!-- HABILITAR REDIRECIONAMENTO PARA HTTPS EM PRODUÇÃO -->
     <add key="CMS.Https.Habilitar" value="False" />
+    <!--INTEGRAÇÃO-->
+    <add key="URL.Integracao.Movidesk.Person" value="https://api.movidesk.com/public/v1/persons" />
+    <add key="URL.Integracao.Movidesk.Ticket" value="https://api.movidesk.com/public/v1/tickets" />
+    <add key="URL.Integracao.Movidesk.Token" value="35f58971-abb0-40b4-8254-c2ebdf3b05a6" />
     <!--URL SSL-->
     <add key="CMS.Configuracoes.Url.Ssl" value="" />
     <!-- URL SSL HABILITADA -->
