--- a/CMSv4/Web.config
+++ b/CMSv4/Web.config
@@ -47,6 +47,11 @@
     <add key="URL.Integracao.Movidesk.Person" value="https://api.movidesk.com/public/v1/persons" />
     <add key="URL.Integracao.Movidesk.Ticket" value="https://api.movidesk.com/public/v1/tickets" />
     <add key="URL.Integracao.Movidesk.Token" value="35f58971-abb0-40b4-8254-c2ebdf3b05a6" />
+    <add key="URL.Integracao.Movidesk.Proposta.Comercial" value="104484" />
+    <add key="URL.Integracao.Movidesk.Booking.Number" value="41543" />
+    <add key="URL.Integracao.Movidesk.Numero.Bl" value="71868" />
+    <add key="URL.Integracao.Movidesk.Local.Coleta" value="104486" />
+    <add key="URL.Integracao.Movidesk.CustomFieldRule" value="51710" />
     <!--URL SSL-->
     <add key="CMS.Configuracoes.Url.Ssl" value="" />
     <!-- URL SSL HABILITADA -->
