--- a/CMSv4/CMSv4.csproj
+++ b/CMSv4/CMSv4.csproj
@@ -1996,6 +1996,7 @@
     <Content Include="Areas\Modulo\Views\AgendamentoIntermodal\ScriptImportar.cshtml" />
     <Content Include="Areas\Modulo\Views\AgendamentoIntermodal\ImportarCarga.cshtml" />
     <Content Include="Areas\Modulo\Views\AgendamentoIntermodal\ScriptImportarCarga.cshtml" />
+    <Content Include="Areas\Modulo\Views\AgendamentoIntermodal\ImportarSucesso.cshtml" />
     <None Include="bundleconfig.json" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\asp_net\main.ashx" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\conf.json" />
