--- a/CMSv4/Web.config
+++ b/CMSv4/Web.config
@@ -52,6 +52,7 @@
     <add key="URL.Integracao.Movidesk.Numero.Bl" value="71868" />
     <add key="URL.Integracao.Movidesk.Local.Coleta" value="104486" />
     <add key="URL.Integracao.Movidesk.CustomFieldRule" value="51710" />
+    <add key="URL.Integracao.Url.Atual" value="http://localhost:55056/" />
     <!--URL SSL-->
     <add key="CMS.Configuracoes.Url.Ssl" value=""/>
     <!-- URL SSL HABILITADA -->
