--- a/CMSv4.Rotinas/CMSv4.Rotinas.csproj
+++ b/CMSv4.Rotinas/CMSv4.Rotinas.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Base\RotinaBase.cs" />
     <Compile Include="Base\Rotinas.cs" />
     <Compile Include="Base\Util.cs" />
+    <Compile Include="RotinaIntegracao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicarAgendados.cs" />
   </ItemGroup>
