--- a/CMSv4/CMSv4.csproj
+++ b/CMSv4/CMSv4.csproj
@@ -295,6 +295,7 @@
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Content Include="Areas\Modulo\Views\AgendamentoIntermodal\ScriptImportarDTA.cshtml" />
     <Content Include="Content\css\pagespeed\bootstrap-custom.css" />
     <Content Include="Content\css\pagespeed\lighthouse.css" />
     <Content Include="Content\css\plugins\cropper\cropper.css" />
@@ -2006,6 +2007,7 @@
     <Content Include="Areas\Modulo\Views\AgendamentoIntermodal\ImportarDTA.cshtml" />
     <Content Include="Areas\Modulo\Views\AgendamentoIntermodal\ImportarCargaDTA.cshtml" />
     <Content Include="Areas\Modulo\Views\AgendamentoIntermodal\PopupConfirmacao.cshtml" />
+    <Content Include="Areas\Modulo\Views\AgendamentoIntermodal\ScriptImportarCargaDTA.cshtml" />
     <None Include="bundleconfig.json" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\asp_net\main.ashx" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\conf.json" />
