Modulo Lista aceitar imagesn webp e  alterar o titulo da pagina

--- a/CMSv4/Web.config
+++ b/CMSv4/Web.config
@@ -151,6 +151,9 @@
     <httpCookies httpOnlyCookies="true" requireSSL="true"/>
   </system.web>
   <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".webp" mimeType="image/webp"></mimeMap>
+    </staticContent>
     <security>
       <requestFiltering>
         <requestLimits maxQueryString="3000" maxUrl="1000" maxAllowedContentLength="2147483647"/>
