--- a/CMSv4/CMSv4.csproj
+++ b/CMSv4/CMSv4.csproj
@@ -2010,6 +2010,7 @@
     <Content Include="Areas\Modulo\Views\AgendamentoIntermodal\ScriptImportarCargaDTA.cshtml" />
     <Content Include="Areas\Modulo\Views\Banner\HomeDinamica.cshtml" />
     <Content Include="Areas\Modulo\Views\Banner\_ExemploViewItem.cshtml" />
+    <Content Include="Areas\ModuloAdmin\Views\FaleConoscoAdmin\Relatorios.cshtml" />
     <None Include="bundleconfig.json" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\asp_net\main.ashx" />
     <Content Include="Content\js\plugins\ckeditor\plugins\fileman\conf.json" />
