--- a/CMSv4.BusinessLayer/CMSv4.BusinessLayer.csproj
+++ b/CMSv4.BusinessLayer/CMSv4.BusinessLayer.csproj
@@ -60,9 +60,8 @@
     <Reference Include="Google.Apis.PlatformServices, Version=1.41.1.0, Culture=neutral, PublicKeyToken=4b01fa6e34db77ab, processorArchitecture=MSIL">
       <HintPath>..\packages\VM2.Google.Analytics.1.0.0.2\lib\net45\Google.Apis.PlatformServices.dll</HintPath>
     </Reference>
-    <Reference Include="IconPack, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\IconPack\IconPack.dll</HintPath>
+    <Reference Include="IconPack">
+      <HintPath>..\CMSv4.Externos\IconPack\IconPack.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.IO.RecyclableMemoryStream, Version=1.4.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.IO.RecyclableMemoryStream.1.4.1\lib\net46\Microsoft.IO.RecyclableMemoryStream.dll</HintPath>
